fix some bugs, update board and figures to map
