# server/domains/game/GameHandlers.go
@@ -83,7 +83,7 @@ func (h *GamesHandlers) GetBoard(c *fiber.Ctx) error {
 // @Security       JWT
 // @Param gameId path int true "gameId"
 // @Success 200 {object}  dto.GetHistoryResponse
-// @Router /game/:gameId/history [get]
+// @Router /game/{gameId}/history [get]
 func (h *GamesHandlers) GetHistory(c *fiber.Ctx) error {
 	request, err := dto.GetGameId(c)
 	if err != nil {
@@ -111,7 +111,7 @@ func (h *GamesHandlers) GetHistory(c *fiber.Ctx) error {
 // @Param gameId path int true "gameId"
 // @Param move body dto.DoMoveRequest true "move"
 // @Success 200 {object}  dto.GetBoardResponse
-// @Router /game/:gameId/move [post]
+// @Router /game/{gameId}/move [post]
 func (h *GamesHandlers) DoMove(c *fiber.Ctx) error {
 	request, err := dto.GetGameId(c)
 	if err != nil {
@@ -127,10 +127,14 @@ func (h *GamesHandlers) DoMove(c *fiber.Ctx) error {
 
 	userId := c.Context().Value("userId")
 
+	fmt.Println(100)
+
 	responseDoMove, err := h.gameService.DoMove(request.GameId, userId, requestDoMove)
 	if err != nil {
 		return c.SendStatus(fiber.StatusInternalServerError)
 	}
+
+	fmt.Println(101)
 
 	return c.JSON(responseDoMove)
 }
